add custom cecil nuget

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@
 ##  If you have NuGet Package Restore enabled, uncomment this
 packages/
 ForSample/
+NuGetCecilBuild/
 NugetBuild/
 ChocolateyNuGetBuild/
 
