--- a/Fody.Tests/packages.config
+++ b/Fody.Tests/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fody" version="1.22.1" targetFramework="net45" developmentDependency="true" />
+  <package id="Fody" version="1.24.0-beta3" targetFramework="net45" developmentDependency="true" />
   <package id="ModuleInit.Fody" version="1.5.6.0" targetFramework="net45" developmentDependency="true" />
   <package id="Moq" version="4.2.1402.2112" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
-  <package id="Octokit" version="0.3.0" targetFramework="net45" />
+  <package id="Octokit" version="0.3.4" targetFramework="net45" />
   <package id="SyncOMatic" version="0.1.1.0" targetFramework="net45" />
 </packages>
