--- a/FodyCommon/packages.config
+++ b/FodyCommon/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fody" version="1.24.0-beta3" targetFramework="net40" developmentDependency="true" />
+  <package id="Fody" version="1.24.0" targetFramework="net40" developmentDependency="true" />
   <package id="MethodTimer.Fody" version="1.14.1.0" targetFramework="net40" developmentDependency="true" />
 </packages>
