--- a/FodyIsolated/packages.config
+++ b/FodyIsolated/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Caseless.Fody" version="1.3.3.0" targetFramework="net40" developmentDependency="true" />
-  <package id="Fody" version="1.24.0-beta3" targetFramework="net40" developmentDependency="true" />
+  <package id="Fody" version="1.24.0" targetFramework="net40" developmentDependency="true" />
   <package id="MethodTimer.Fody" version="1.14.1.0" targetFramework="net40" developmentDependency="true" />
   <package id="Virtuosity.Fody" version="1.19.7.0" targetFramework="net40" developmentDependency="true" />
 </packages>
