--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -6,5 +6,7 @@
   <repository path="..\FodyCommon\packages.config" />
   <repository path="..\FodyIsolated.Tests\packages.config" />
   <repository path="..\FodyIsolated\packages.config" />
+  <repository path="..\NuGet\packages.config" />
+  <repository path="..\NuGetCecil\packages.config" />
   <repository path="..\SampleTask.Fody\packages.config" />
 </repositories>
