--- a/NuGet/Fody.targets
+++ b/NuGet/Fody.targets
@@ -50,6 +50,7 @@
     <Fody.WeavingTask
           AssemblyPath="@(IntermediateAssembly)"
           IntermediateDir="$(IntermediateDir)"
+          FinalDir="$(ProjectDir)$(OutputPath)"
           KeyFilePath="$(FodyKeyFilePath)"
           ProjectDirectory="$(ProjectDir)"
           SolutionDir="$(FodySolutionDir)"
@@ -59,6 +60,10 @@
           DefineConstants="$(DefineConstants)"
       />
   </Target>
+
+  <UsingTask
+      TaskName="Fody.VerifyTask"
+      AssemblyFile="$(FodyPath)\Fody.dll" />
   <Target
       AfterTargets="AfterBuild"
       Name="WinFodyVerifyTarget"
@@ -67,6 +72,7 @@
     <Fody.VerifyTask
           AssemblyPath="@(IntermediateAssembly)"
           IntermediateDir="$(IntermediateDir)"
+          FinalDir="$(ProjectDir)$(OutputPath)"
           KeyFilePath="$(FodyKeyFilePath)"
           ProjectDirectory="$(ProjectDir)"
           SolutionDir="$(FodySolutionDir)"
