--- a/Fody/Fody.csproj
+++ b/Fody/Fody.csproj
@@ -54,6 +54,7 @@
       <Link>SearchDirectories\NugetConfigReader.cs</Link>
     </Compile>
     <Compile Include="AssemblyLocation.cs" />
+    <Compile Include="PeVerifier.cs" />
     <Compile Include="ContainsTypeChecker.cs" />
     <Compile Include="DomainAssemblyResolver.cs" />
     <Compile Include="Processor.cs" />
@@ -67,6 +68,7 @@
     <Compile Include="ProjectPathFinder.cs" />
     <Compile Include="ProjectWeaversReader.cs" />
     <Compile Include="AssemblyPathValidator.cs" />
+    <Compile Include="VerifyTask.cs" />
     <Compile Include="WeaverAssemblyPathFinder.cs" />
     <Compile Include="SolutionPathValidator.cs" />
     <Compile Include="AddinFinder\AddinFilesEnumerator.cs" />
