fix for integration test

--- a/Integration/WithNugetWeavers/WithNugetWeavers.csproj
+++ b/Integration/WithNugetWeavers/WithNugetWeavers.csproj
@@ -49,5 +49,5 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\..\ForSample\build\Fody.targets" />
+  <Import Project="$(SolutionDir)\..\ForSample\build\lib\Fody.targets" />
 </Project>
