--- a/Integration/WithOnlyInSolutionWeaver/WithOnlyInSolutionWeaver.csproj
+++ b/Integration/WithOnlyInSolutionWeaver/WithOnlyInSolutionWeaver.csproj
@@ -50,5 +50,5 @@
     <Compile Include="Class1.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\..\ForSample\build\Fody.targets" />
+  <Import Project="$(SolutionDir)\..\ForSample\build\lib\Fody.targets" />
 </Project>
