--- a/Fody.Tests/packages.config
+++ b/Fody.Tests/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ApprovalTests" version="3.0.8" targetFramework="net45" />
+  <package id="ApprovalUtilities" version="3.0.8" targetFramework="net45" />
   <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="ObjectApproval" version="1.2.0" targetFramework="net45" />
 </packages>
