--- a/Fody.Tests/Fody.Tests.csproj
+++ b/Fody.Tests/Fody.Tests.csproj
@@ -91,6 +91,7 @@
     <Compile Include="AppDomainAssemblyFinder.cs" />
     <Compile Include="AssemblyVersionReaderTests.cs" />
     <Compile Include="ContainsTypeCheckerTests.cs" />
+    <Compile Include="GlobalSetUp.cs" />
     <Compile Include="NuGetPackageRootTest.cs" />
     <Compile Include="PeVerifierTests.cs" />
     <Compile Include="DomainAssemblyResolverTests.cs" />
