--- a/NuGet/Fody.targets
+++ b/NuGet/Fody.targets
@@ -68,18 +68,21 @@
         TaskParameter="ExecutedWeavers"
         PropertyName="FodyExecutedWeavers" />
     </Fody.WeavingTask>
+
+    <PropertyGroup>
+      <FodyWeavingTargetWasRun>True</FodyWeavingTargetWasRun>
+    </PropertyGroup>
+      
   </Target>
 
 
   <UsingTask
     TaskName="Fody.VerifyTask"
     AssemblyFile="$(FodyPath)\Fody.dll" />
-  <Target Condition="'$(NCrunch)' != '1' And Exists($(TargetPath))"
+  <Target Condition="'$(NCrunch)' != '1' And Exists($(TargetPath)) And ('$(FodyWeavingTargetWasRun)' == 'True')"
       AfterTargets="AfterBuild"
       Name="FodyVerifyTarget"
-      DependsOnTargets="$(FodyVerifyDependsOnTargets)"
-      Inputs="@(IntermediateAssembly->'%(FullPath)');$(FodyKeyFilePath);$(ProjectWeaverXml)"
-      Outputs="$(TargetPath)">
+      DependsOnTargets="$(FodyVerifyDependsOnTargets)">
 
     <Fody.VerifyTask
           ProjectDirectory="$(ProjectDir)"
