Schedule 'FodyVerifyTarget' after 'FodyTarget' instead of after 'AfterBuild' so that if peverify fails, the next incremental doesn't succeed.

--- a/NuGet/Fody.targets
+++ b/NuGet/Fody.targets
@@ -79,14 +79,14 @@
   <UsingTask
     TaskName="Fody.VerifyTask"
     AssemblyFile="$(FodyPath)\Fody.dll" />
-  <Target Condition="'$(NCrunch)' != '1' And Exists($(TargetPath)) And ('$(FodyWeavingTargetWasRun)' == 'True')"
-      AfterTargets="AfterBuild"
+  <Target Condition="'$(NCrunch)' != '1' And ('$(FodyWeavingTargetWasRun)' == 'True')"
+      AfterTargets="FodyTarget"
       Name="FodyVerifyTarget"
       DependsOnTargets="$(FodyVerifyDependsOnTargets)">
 
     <Fody.VerifyTask
           ProjectDirectory="$(ProjectDir)"
-          TargetPath="$(TargetPath)"
+          TargetPath="@(IntermediateAssembly->'%(FullPath)')"
           SolutionDir="$(FodySolutionDir)"
           DefineConstants="$(DefineConstants)"
       />
